apps/app1/overlays/qa/patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: app1
        resources:
          limits:
            memory: "192Mi"
            cpu: "400m"
          requests:
            memory: "96Mi"
            cpu: "200m"
